sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:15: error: ')' expected but '}' found.
       }
       ^