sort.basic.bubble.AlgBubbleSort1.scala.code
var nbValeurs=getNombresValeurs()
fin = 0

def bubbleSort()  {
  do {
      fin = 0
      for (i <- 1 to nbValeurs){
         for (j<- 2 to nbValeurs{
            if(plusPetit(i,j)){
               echange(i,j)
               fin = fin +1
            }
          }
       }
  } while ( fin != 0)
   
}